# protolang

./: Cargo.toml  main.x
spec/: 000.txt
src/: errors.rs  grammar.lalrpop  grammar.pest  grammar.rs  main.rs
src/ast/: expression.rs  mod.rs  printer.rs
src/interpreter/: mod.rs
src/lex/: lex.rs  mod.rs  tokens.rs
src/parse/: mod.rs
