[package]
name = "compiler"
version = "0.1.0"
authors = ["James Morrison <jamesmorrison3@live.co.uk>"]
edition = "2018"

[lib]
name = "compiler_web"
crate-type = ["cdylib"]
path = "src/main.rs"

[[bin]]
name = "compiler_cmd"
path = "src/main.rs"

[dependencies]
clap = "2"
wasm-bindgen = "0.2"
js-sys = "0.3"
pest = "2.0"
pest_derive = "2.0"
lalrpop-util = "0.17.2"
regex = "0.2.1"

[build-dependencies]
lalrpop = "0.17.2"
regex = "0.2.1"